@@ -1,3 +1,11 @@
+2012-11-14  Donal K. Fellows  <dkf@users.sf.net>
+
+	* unix/tclUnixPipe.c (DefaultTempDir): [Bug 2933003]: Allow overriding
+	of the back-stop default temporary file location at compile time by
+	setting the TCL_TEMPORARY_FILE_DIRECTORY #def to a string containing
+	the directory name (defaults to "/tmp" as that is the most common
+	default).
+
 2012-11-07  Don Porter  <dgp@users.sourceforge.net>
 
 	* win/tclWinSock.c:	[Bug 3574493] Avoid hanging on exit due to
